--- a/lab6/src/app/app.component.html
+++ b/lab6/src/app/app.component.html
@@ -1,9 +1,4 @@
-<h1>Angular Router App</h1>
-<nav>
-  <ul>
-    <li><a routerLink="/home-component" routerLinkActive="active" ariaCurrentWhenActive="page">Home Component</a></li>
-    <li><a routerLink="/about-component" routerLinkActive="active" ariaCurrentWhenActive="page">About Component</a></li>
-  </ul>
-</nav>
-<!-- The routed views render in the <router-outlet>-->
-<router-outlet></router-outlet>
+<app-top-bar></app-top-bar>
+<div class="app-container">
+  <router-outlet></router-outlet>
+</div>
